--- a/BAAR/BAAR.iOS/Main.storyboard
+++ b/BAAR/BAAR.iOS/Main.storyboard
@@ -309,13 +309,13 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="798" translatesAutoresizingMaskIntoConstraints="NO">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="798" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
                                 <rect key="frame" x="8" y="16" width="398" height="477"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="left" axis="vertical" id="460" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" autoresizesSubviews="NO">
                                         <rect key="frame" x="0.0" y="0.0" width="398" height="869"/>
                                         <subviews/>
-                                        <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES" distribution="fillEqually" spacing="1"/>
+                                        <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES" distribution="equalSpacing" spacing="1" alignment="trailing"/>
                                     </stackView>
                                 </subviews>
                                 <variation key="default">
