--- a/BAAR/BAAR.iOS/Main.storyboard
+++ b/BAAR/BAAR.iOS/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oBE-Ac-vcx" buttonType="roundedRect" hasAttributedTitle="YES" verticalHuggingPriority="371">
-                                <rect key="frame" x="0.0" y="315" width="414" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oBE-Ac-vcx" buttonType="roundedRect" hasAttributedTitle="YES" verticalHuggingPriority="371" fixedFrame="YES">
+                                <rect key="frame" x="0.0" y="300" width="320" height="53"/>
                                 <connections>
                                     <segue id="579" destination="283" kind="show"/>
                                 </connections>
@@ -31,13 +31,13 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=compact" preservesSuperviewLayoutMargins="YES" fixedFrame="YES">
+                                <variation key="heightClass=regular-widthClass=compact" layoutMarginsFollowReadableWidth="YES">
                                     <color key="tintColor" colorSpace="calibratedRGB" red="0.94901960784313721" green="0.95294117647058818" blue="0.96078431372549022" alpha="1"/>
                                     <color key="backgroundColor" colorSpace="calibratedRGB" red="0.47450980392156861" green="0.42745098039215684" blue="0.42745098039215684" alpha="1"/>
                                 </variation>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="17" id="3" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="84" y="165" width="247" height="30"/>
+                                <rect key="frame" x="37" y="165" width="247" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
@@ -67,7 +67,7 @@
                                 </constraints>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="262" translatesAutoresizingMaskIntoConstraints="NO" text="Username">
-                                <rect key="frame" x="0.0" y="105" width="414" height="57"/>
+                                <rect key="frame" x="0.0" y="105" width="320" height="57"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                 <color key="textColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
                                 <nil key="highlightedColor"/>
@@ -89,7 +89,7 @@
                                 </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="263" translatesAutoresizingMaskIntoConstraints="NO" text="Password" adjustsLetterSpacingToFitWidth="NO">
-                                <rect key="frame" x="83" y="218" width="249" height="36"/>
+                                <rect key="frame" x="36" y="218" width="249" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                 <nil key="highlightedColor"/>
                                 <color key="textColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
@@ -126,6 +126,9 @@
                             <constraint id="766" firstItem="263" firstAttribute="centerX" secondItem="262" secondAttribute="centerX"/>
                             <constraint id="769" firstItem="263" firstAttribute="top" secondItem="3" secondAttribute="centerY" constant="38"/>
                             <constraint id="770" firstItem="263" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" constant="56"/>
+                            <constraint id="880" firstItem="8bC-Xf-vdC" firstAttribute="leadingMargin" secondItem="oBE-Ac-vcx" secondAttribute="leading" constant="16"/>
+                            <constraint id="881" firstItem="oBE-Ac-vcx" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" constant="16"/>
+                            <constraint id="918" firstItem="oBE-Ac-vcx" firstAttribute="top" secondItem="4" secondAttribute="bottom" constant="8"/>
                         </constraints>
                         <color key="tintColor" colorSpace="calibratedRGB" red="0.94901960784313721" green="0.95294117647058818" blue="0.96078431372549022" alpha="1"/>
                         <variation key="default">
@@ -142,6 +145,9 @@
                                 <exclude reference="766"/>
                                 <exclude reference="769"/>
                                 <exclude reference="770"/>
+                                <exclude reference="880"/>
+                                <exclude reference="881"/>
+                                <exclude reference="918"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -158,6 +164,9 @@
                                 <include reference="766"/>
                                 <include reference="769"/>
                                 <include reference="770"/>
+                                <include reference="880"/>
+                                <include reference="881"/>
+                                <include reference="918"/>
                             </mask>
                         </variation>
                     </view>
@@ -213,7 +222,7 @@
                         </variation>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="258" translatesAutoresizingMaskIntoConstraints="NO" text="Going Pro!">
-                                <rect key="frame" x="61" y="102" width="293" height="78"/>
+                                <rect key="frame" x="14" y="102" width="293" height="78"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                 <nil key="highlightedColor"/>
                                 <accessibility key="accessibilityConfiguration" label="Scan"/>
@@ -272,10 +281,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="798" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" showsHorizontalScrollIndicator="NO">
-                                <rect key="frame" x="8" y="16" width="398" height="546"/>
+                                <rect key="frame" x="7" y="16" width="307" height="384"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="left" axis="vertical" id="460" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" autoresizesSubviews="NO">
-                                        <rect key="frame" x="0.0" y="-350" width="398" height="890"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="307" height="384"/>
                                         <subviews/>
                                         <variation key="heightClass=regular-widthClass=compact" distribution="equalSpacing" spacing="1" alignment="trailing" fixedFrame="YES"/>
                                     </stackView>
@@ -291,54 +300,30 @@
                                     </mask>
                                 </variation>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="288" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="0.0" y="671" width="414" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="288" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="0.0" y="484" width="414" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Add Ticket">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=compact">
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <color key="backgroundColor" colorSpace="calibratedRGB" red="0.47450980392156861" green="0.42745098039215684" blue="0.42745098039215684" alpha="1"/>
-                                    <mask key="constraints">
-                                        <include reference="845"/>
-                                        <include reference="846"/>
-                                    </mask>
                                 </variation>
-                                <constraints>
-                                    <constraint id="845" firstAttribute="width" constant="414"/>
-                                    <constraint id="846" firstAttribute="height" constant="30"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="845"/>
-                                        <exclude reference="846"/>
-                                    </mask>
-                                </variation>
+                                <connections/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="287" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" horizontalHuggingPriority="1">
-                                <rect key="frame" x="0.0" y="622" width="414" height="33"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="287" translatesAutoresizingMaskIntoConstraints="NO" horizontalHuggingPriority="1000">
+                                <rect key="frame" x="7" y="429" width="55" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=compact">
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <color key="tintColor" colorSpace="calibratedRGB" red="0" green="0.52549019607843139" blue="1" alpha="1"/>
                                     <color key="backgroundColor" colorSpace="calibratedRGB" red="0.47450980392156861" green="0.42745098039215684" blue="0.42745098039215684" alpha="1"/>
-                                    <mask key="constraints">
-                                        <include reference="857"/>
-                                    </mask>
                                 </variation>
                                 <connections/>
-                                <constraints>
-                                    <constraint id="857" firstAttribute="width" constant="414"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="857"/>
-                                    </mask>
-                                </variation>
                             </button>
                         </subviews>
                         <variation key="default">
@@ -346,12 +331,6 @@
                                 <exclude reference="287"/>
                                 <exclude reference="288"/>
                                 <exclude reference="798"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="843"/>
-                                <exclude reference="844"/>
-                                <exclude reference="855"/>
-                                <exclude reference="856"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -362,24 +341,13 @@
                             </mask>
                             <color key="tintColor" colorSpace="calibratedRGB" red="0" green="0.52549019607843139" blue="1" alpha="1"/>
                             <color key="backgroundColor" colorSpace="calibratedRGB" red="0" green="0.035294117647058823" blue="0.10196078431372549" alpha="1"/>
-                            <mask key="constraints">
-                                <include reference="843"/>
-                                <include reference="844"/>
-                                <include reference="855"/>
-                                <include reference="856"/>
-                            </mask>
                         </variation>
-                        <constraints>
-                            <constraint id="843" firstItem="284" firstAttribute="trailing" secondItem="288" secondAttribute="trailing"/>
-                            <constraint id="844" firstItem="284" firstAttribute="bottom" secondItem="288" secondAttribute="bottom" constant="35"/>
-                            <constraint id="855" firstItem="284" firstAttribute="trailing" secondItem="287" secondAttribute="trailing" relation="greaterThanOrEqual"/>
-                            <constraint id="856" firstItem="284" firstAttribute="bottom" secondItem="287" secondAttribute="bottom" constant="81"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="TicketHolder" destination="460" id="name-outlet-460"/>
                         <outlet property="Scroll" destination="798" id="name-outlet-798"/>
                         <outlet property="TicketButton" destination="288" id="name-outlet-288"/>
+                        <outlet property="SubmitButton" destination="287" id="name-outlet-287"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="285" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -389,8 +357,9 @@
     </scenes>
     <resources>
         <image name="GoingPro_Icon.png" width="1575" height="1575"/>
+        <image name="DropDownArrow.png" width="225" height="225"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedScreenMetrics key="destination" type="retina55"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
 </document>
